--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/perume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/perfume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Perfume </p>
             <p ></p>
             <p> 2023 </p>
