Kafkas daughter add

--- a/index-year.html
+++ b/index-year.html
@@ -90,6 +90,11 @@
             <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Kafka's Daughter</p>
+            <p> Garments</p>
+            <p> 2023</p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/perfume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Perfume </p>
