--- a/garments.html
+++ b/garments.html
@@ -87,7 +87,11 @@
             <p>YEAR</p>
           </div>
 
-
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Kafka's Daughter</p>
+            <p></p>
+            <p> 2023</p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Comfort-Seeking Clothing</p>
