--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Kafka's Daughter</p>
+            <p> </p>
+            <p> 2023</p>
+          </div></a>
+
 
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Comfort-Seeking Clothing</p>
