--- a/project/kafkas_daughter.html
+++ b/project/kafkas_daughter.html
@@ -14,7 +14,7 @@
       <p> Final Project at Goldsmiths.</p>
       <p> Kafka’s Daughter is a narrative told through a series of boxes containing objects, garments, illustrations, and a novelette. The project tells the story of a character, Lana Kammel, and her imagined telepathic connection with Czech author Franz Kafka. The viewer is invited to explore the boxes, which contain various artefacts both taken from and exterior to the fiction: Lana’s Dress, a recreation of Kafka’s “Odradek” from “the cares of a family man”, a copy of Gustav Janouch’s “Conversations with Kafka”, various design sketches and illustrations, and a hand-bound copy of “Kafka’s Daughter” itself. </p>
       <p>Through this project, I am exploring material practice as a means to expand fiction writing into a cross-medium object, as well as exploring the relationship between reader and writer as encoders and decoders separated by gaps in time, space, language, and experience. </p>
-      <p><a href="Kafkas_daughter.pdf" target="blank">Read the Novelette</a></p>
+      <p><a href="Kafkas_Daughter.pdf" target="blank">Read the Novelette</a></p>
 
       <img src="../image/kafkas_daughter/IMG_7702.jpeg" width="100%"></img>
       <p></p>
