add yohji illustration

--- a/project/illustration.html
+++ b/project/illustration.html
@@ -39,9 +39,16 @@
 
       <br>
       <br>
+      <img src="../image/illustration/yohji fruits.jpg" width="100%"></img>
+      <br>
+      <p>Fashion Illustration - Yohji Yamamoto ensembles and outfit from Fruits magazine.</p>
+
+
+      <br>
+      <br>
       <img src="../image/illustration/sketchbook 3.png" width="100%"></img>
       <br>
-      <p>Fashion Illustration/ Character design for 'Kafka's Daughter'.</p>
+      <p>Fashion Illustration/ Character design for <a href="kafkas_daughter.html">'Kafka's Daughter'.</a></p>
 
 
 
