--- a/jp/index.html
+++ b/jp/index.html
@@ -25,8 +25,8 @@
         <p  id="title">➝ ケイレブ・ウッドワード</p>
 
 
-        <p id="info">Note: best viewed on desktop</p>
-        <p >Language: <u><a href="../index.html">en</a></u> /<a href="../jp/index.html"> jp </a></p>
+        <p id="info">.</p>
+        <p >国語: <u><a href="../index.html">en</a></u> /<a href="../jp/index.html"> jp </a></p>
 
         <p></p>
 
@@ -88,7 +88,11 @@
           </div>
 
 
-
+          <a href="javascript:void(0);" onclick="window.open('project/perfume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > マシン・香水 </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > マシン・メガネ </p>
@@ -170,7 +174,7 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
             <p > 電波庭 </p>
-            <p id="new"></p>
+            <p></p>
             <p> 2022 </p>
           </div></a>
 
@@ -192,6 +196,12 @@
             <p></p>
             <p>年</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > カフカの娘</p>
+            <p></p>
+            <p> 2023</p>
+          </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
@@ -217,8 +227,8 @@
 
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>屋上アンテナ</p>
-            <p id="updated"></p>
-            <p> 2021 - 2023</p>
+            <p></p>
+            <p> 2021 - 今</p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
