--- a/jp/project/machineglasses.html
+++ b/jp/project/machineglasses.html
@@ -18,21 +18,21 @@
 
     <br>
     <br>
-    <img src="../image/glasses/01.jpg" width="550px"></img>
+    <img src="../../image/glasses/01.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/02.jpg" width="550px"></img>
+    <img src="../../image/glasses/02.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/03.jpg" width="550px"></img>
+    <img src="../../image/glasses/03.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/05.jpg" width="550px"></img>
+    <img src="../../image/glasses/05.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/04.jpg" width="550px"></img>
+    <img src="../../image/glasses/04.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/06.jpg" width="550px"></img>
+    <img src="../../image/glasses/06.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/07.jpg" width="550px"></img>
+    <img src="../../image/glasses/07.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/glasses/08.jpg" width="550px"></img>
+    <img src="../../image/glasses/08.jpg" width="550px"></img>
     <p></p>
     </div>
 
