--- a/structures.html
+++ b/structures.html
@@ -78,7 +78,7 @@
 
       <div id="theList">
         <section>
-          <p> OBJECTS</p>
+          <p> STRUCTURES</p>
 
           <div class="listSplit">
             <p>TITLE</p>
