--- a/jp/index-year.html
+++ b/jp/index-year.html
@@ -22,11 +22,11 @@
 
       <div class="headL">
         <p></p>
-        <p  id="title">➝ Caleb Woodward</p>
+        <p  id="title">➝ ケイレブ・ウッドワード</p>
 
         <p id="info" style="color:white;">.</p>
 
-        <p>Language: <u><a href="../index-year.html">en</a></u> /<a href="../jp/index-year.html"> jp </a></p>
+        <p>国語: <u><a href="../index-year.html">en</a></u> /<a href="../jp/index-year.html"> jp </a></p>
 
 
 
@@ -80,19 +80,33 @@
     <div class="content">
 
       <div id="theList">
-        <p style="text-align: right;">Filter by: <u><a href="index.html">Category</a></u>/ <a href="index-year.html">Year</a></p>
+        <p style="text-align: right;">フィルター: <u><a href="index.html">種類</a></u>/ <a href="index-year.html">年</a></p>
         <section>
 
           <p> 2023</p>
           <div class="listSplit">
-            <p>TITLE</p>
-            <p>CATEGORY</p>
-            <p>YEAR</p>
+            <p>名称</p>
+            <p>種類</p>
+            <p>年</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > カフカの娘</p>
+            <p>服</p>
+            <p> 2023</p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/perfume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > マシン・香水 </p>
+            <p >オブジェクト</p>
+            <p> 2023 </p>
+          </div></a>
+
+
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Rooftop Antenna    </p>
-            <p >Other </p>
-            <p> 2021 - 2023</p>
+            <p>屋上アンテナ</p>
+            <p>その他</p>
+            <p> 2021 - 今</p>
           </div></a>
 
 
@@ -105,45 +119,45 @@
           <p> 2022</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
-            <p>CATEGORY</p>
-            <p>YEAR</p>
+            <p>名称</p>
+            <p>種類</p>
+            <p>年</p>
           </div>
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p> Radio-Field / 電波庭 </p>
-            <p >Structure</p>
+            <p>電波庭 </p>
+            <p>建築物</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Machine Glasses </p>
-            <p >Object</p>
+            <p >マシン・メガネ</p>
+            <p >オブジェクト</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Bolt-Bound Book </p>
-            <p >Object</p>
+            <p > 螺子で綴じた本 </p>
+            <p >オブジェクト</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Window Radiometer </p>
-            <p >Object</p>
+            <p > 放射計の窓 </p>
+            <p >オブジェクト</p>
             <p> 2022 </p>
           </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Window-Like Clock </p>
-            <p>Object</p>
+            <p> 窓のような時計 </p>
+            <p>オブジェクト</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Jewellery</p>
-            <p>Object</p>
+            <p>宝飾</p>
+            <p>オブジェクト</p>
             <p> 2021, 2022</p>
           </div></a>
 
@@ -158,18 +172,18 @@
           <p> 2021</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
-            <p>CATEGORY</p>
-            <p>YEAR</p>
+            <p>名称</p>
+            <p>種類</p>
+            <p>年</p>
           </div>
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Comfort-Seeking Clothing</p>
-            <p>Garment</p>
+            <p > 居心地を探す服</p>
+            <p>服</p>
             <p> 2021</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Station-Searching  (MV)</p>
-            <p>Other</p>
+            <p>駅巡り  (MV)</p>
+            <p>その他</p>
             <p> 2021</p>
           </div></a>
 
@@ -181,29 +195,29 @@
           <p> 2020</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
-            <p>CATEGORY</p>
-            <p>YEAR</p>
+            <p>名称</p>
+            <p>種類</p>
+            <p>年</p>
           </div>
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Build-it Note </p>
-            <p>Object</p>
+            <p > ビルド・イット付箋 </p>
+            <p>オブジェクト</p>
             <p> 2020 </p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Objects on Parade </p>
-            <p>Graphic</p>
+            <p> 練り歩くオブジェクトたち  </p>
+            <p>グラフィック</p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Greenline </p>
-            <p>Graphic</p>
+            <p> 緑の線 </p>
+            <p>グラフィック</p>
             <p> 2020</p>
 
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Dog's Wall</p>
-            <p>Structure</p>
+            <p> 犬の壁</p>
+            <p>建築物</p>
             <p> 2020</p>
           </div></a>
         </section>
@@ -213,14 +227,14 @@
           <p> 2019</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
-            <p>CATEGORY</p>
-            <p>YEAR</p>
+            <p>名称</p>
+            <p>種類</p>
+            <p>年</p>
           </div>
           <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Logo </p>
-            <p>Graphic</p>
-            <p> 2019 - Ongoing</p>
+            <p> ロゴ </p>
+            <p>グラフィック</p>
+            <p> 2019 - 今</p>
           </div></a>
         </section>
 
@@ -238,7 +252,7 @@
 
 
   <script type="text/javascript">
-    var tday=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+    var tday=["日曜日","月曜日","火曜日","水曜日","木曜日","金曜日","土曜日"];
     var tmonth=["01","02","03","04","05","06","07","08","09","10","11","12"];
 
     function GetClock(){
@@ -246,10 +260,10 @@
     var nday=d.getDay(),nmonth=d.getMonth(),ndate=d.getDate(),nyear=d.getFullYear();
     var nhour=d.getHours(),nmin=d.getMinutes(),nsec=d.getSeconds(),ap;
 
-    if(nhour==0){ap=" AM";nhour=12;}
-    else if(nhour<12){ap=" AM";}
-    else if(nhour==12){ap=" PM";}
-    else if(nhour>12){ap=" PM";nhour-=12;}
+    if(nhour==0){ap=" 午前";nhour=12;}
+    else if(nhour<12){ap=" 午前";}
+    else if(nhour==12){ap=" 午後";}
+    else if(nhour>12){ap=" 午後";nhour-=12;}
 
     if(nmin<=9) nmin="0"+nmin;
     if(nsec<=9) nsec="0"+nsec;
