--- a/jp/project/boltbook.html
+++ b/jp/project/boltbook.html
@@ -1,13 +1,13 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Bolt-Bound Book </title>
+  <title> 螺子で綴じた本 </title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Bolt-Bound Book</p>
+    <p>螺子で綴じた本</p>
     </div>
 
     <div class="content">
@@ -17,23 +17,23 @@
 
     <br>
     <br>
-    <img src="../image/boltbook/01.jpg" width="550px"></img>
+    <img src="../../image/boltbook/01.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/02.jpg" width="550px"></img>
+    <img src="../../image/boltbook/02.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/03.jpg" width="550px"></img>
+    <img src="../../image/boltbook/03.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/04.png" width="550px"></img>
+    <img src="../../image/boltbook/04.png" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/07.jpg" width="550px"></img>
+    <img src="../../image/boltbook/07.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/05.jpg" width="550px"></img>
+    <img src="../../image/boltbook/05.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/06.jpg" width="550px"></img>
+    <img src="../../image/boltbook/06.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/08.jpg" width="550px"></img>
+    <img src="../../image/boltbook/08.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/boltbook/09.jpg" width="550px"></img>
+    <img src="../../image/boltbook/09.jpg" width="550px"></img>
 
     </div>
 
