--- a/jp/project/antenna.html
+++ b/jp/project/antenna.html
@@ -7,14 +7,14 @@
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Rooftop Antenna</p>
+    <p>屋上アンテナ</p>
     </div>
 
     <div class="content">
-      <p>A Bi-weekly Radio Show for Goldsmiths' <a href="https://wired.radio/"> Wired Radio</a> station, where I play a mix of electronic, ambient, experimental and whatever else.</p>
+      <p>アンビエント・ミュージックやエレクトロニカのラジオ番組。前はゴルドスミス大学の公式インターネットラジオ局「wired radio」で放送していましたが、今は新しい実験音楽的レコードレイベル「Altamira Records」と協力として出しています。</p>
 
 
-    <img src="../image/antenna/cover for radio show-02.png" width="400px"></img>
+    <img src="../../image/antenna/cover for radio show-02.png" width="400px"></img>
     <br>
     <p>Episode 1 (2021 11 26)</p><br>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1167467509&color=%23ececec&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
