--- a/jp/project/buildit.html
+++ b/jp/project/buildit.html
@@ -17,9 +17,9 @@
 
     <br>
     <br>
-    <img src="../image/buildit/01.png" width="550px"></img>
+    <img src="../../image/buildit/01.png" width="550px"></img>
     <p></p>
-    <img src="../image/buildit/02.png" width="550px"></img>
+    <img src="../../image/buildit/02.png" width="550px"></img>
     </div>
 
 
