--- a/jp/project/comfort-clothing.html
+++ b/jp/project/comfort-clothing.html
@@ -17,25 +17,25 @@
     <p>Most important to me in this project was to instil a sense of “anchoring” or “grounding”, so I designed and made a set of weights to attach to different points on the body that can also be removed and sit on pressure points. A large Tetrapod-shaped pillow is a huggable human-scale version of sturdy concrete coastal wave defences, creating a feeling of protection and security.</p>
     <p>Modelled by <a href="https://www.instagram.com/_mey.line_/" target= "blank" rel="noreferrer noopener">Alice Ferrante</a>.</p>
     <p></p>
-    <img src="../image/comfort-clothing/01.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/01.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/09.PNG" width="560px"></img>
+    <img src="../../image/comfort-clothing/09.PNG" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/02.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/02.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/03.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/03.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/04.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/04.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/05.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/05.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/06.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/06.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/07.JPG" width="560px"></img>
+    <img src="../../image/comfort-clothing/07.JPG" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/08.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/08.jpg" width="560px"></img>
     <p></p>
-    <img src="../image/comfort-clothing/10.jpg" width="560px"></img>
+    <img src="../../image/comfort-clothing/10.jpg" width="560px"></img>
 
     <p><br></p>
 
