--- a/jp/project/dogs-wall.html
+++ b/jp/project/dogs-wall.html
@@ -19,8 +19,8 @@
   “ I like the good use of space and the idea of the dog as spectacle and spectator… framed high up on the wall like a living sculpture!”</p>
     <br>
     <br>
-    <img src="../image/dogs wall/dogs wall line.png" width="550px"></img>
-    <img src="../image/dogs wall/dogs wall render.png" width="550"></img>
+    <img src="../../image/dogs wall/dogs wall line.png" width="550px"></img>
+    <img src="../../image/dogs wall/dogs wall render.png" width="550"></img>
     </div>
 
 
