--- a/jp/project/greenline.html
+++ b/jp/project/greenline.html
@@ -22,14 +22,14 @@
       <br>
       <div class="twoSplit">
 
-        <img src="../image/greenline/2020 01 27 Greenline-02.png" width="100%"></img>
-        <img src="../image/greenline/2020 01 27 Greenline-04.png" width="100%"></img>
+        <img src="../../image/greenline/2020 01 27 Greenline-02.png" width="100%"></img>
+        <img src="../../image/greenline/2020 01 27 Greenline-04.png" width="100%"></img>
         <p></p>
         <p></p>
         <p></p>
         <p></p>
-        <img src="../image/greenline/2020 01 27 Greenline-08.png" width="100%"></img>
-        <img src="../image/greenline/2020 01 27 Greenline-01.png" width="100%"></img>
+        <img src="../../image/greenline/2020 01 27 Greenline-08.png" width="100%"></img>
+        <img src="../../image/greenline/2020 01 27 Greenline-01.png" width="100%"></img>
 
       </div>
       <p></p>
