--- a/jp/project/jewellery.html
+++ b/jp/project/jewellery.html
@@ -20,7 +20,7 @@
         <p> 2021 08</p>
       </div>
       <br>
-      <img src="../image/jewellery/ring.jpg" width="100%"></img>
+      <img src="../../image/jewellery/ring.jpg" width="100%"></img>
       <br>
       <br>
       <p>A simple silver ring with a hand-punched two dot motif.</p>
@@ -31,11 +31,11 @@
         <p> 2022 01</p>
       </div>
       <br>
-      <img src="../image/jewellery/cuff.jpg" width="100%"></img>
+      <img src="../../image/jewellery/cuff.jpg" width="100%"></img>
       <p></p>
-      <img src="../image/jewellery/cuff 3.jpg" width="100%"></img>
+      <img src="../../image/jewellery/cuff 3.jpg" width="100%"></img>
       <p></p>
-      <img src="../image/jewellery/cuff 2.jpg" width="100%"></img>
+      <img src="../../image/jewellery/cuff 2.jpg" width="100%"></img>
       <p></p>
       <p>Following the ring, I was commissioned to create a simple silver cuff with a similar two dot motif.</p>
 
