--- a/jp/project/kafkas_daughter.html
+++ b/jp/project/kafkas_daughter.html
@@ -16,28 +16,28 @@
       <p>Through this project, I am exploring material practice as a means to expand fiction writing into a cross-medium object, as well as exploring the relationship between reader and writer as encoders and decoders separated by gaps in time, space, language, and experience. </p>
       <p><a href="Kafkas_Daughter.pdf" target="blank">Read the Novelette</a></p>
 
-      <img src="../image/kafkas_daughter/IMG_7702.jpeg" width="100%"></img>
+      <img src="../../image/kafkas_daughter/IMG_7702.jpeg" width="100%"></img>
       <p></p>
         <div class="twoSplit">
-          <img src="../image/kafkas_daughter/IMG_7699.jpeg" width="100%"></img>
-          <img src="../image/kafkas_daughter/IMG_7802.jpeg"  width="100%"></img>
+          <img src="../../image/kafkas_daughter/IMG_7699.jpeg" width="100%"></img>
+          <img src="../../image/kafkas_daughter/IMG_7802.jpeg"  width="100%"></img>
 
         </div>
         <p></p>
-        <img src="../image/kafkas_daughter/IMG_7744.jpeg" width="100%"></img>
+        <img src="../../image/kafkas_daughter/IMG_7744.jpeg" width="100%"></img>
         <p></p>
 
-        <img src="../image/kafkas_daughter/IMG_7899.jpeg" width="100%"></img>
+        <img src="../../image/kafkas_daughter/IMG_7899.jpeg" width="100%"></img>
         <p></p>
-        <img src="../image/kafkas_daughter/IMG_7875.jpeg" width="100%"></img>
+        <img src="../../image/kafkas_daughter/IMG_7875.jpeg" width="100%"></img>
         <p></p>
-        <img src="../image/illustration/prague.png" width="100%"></img>
+        <img src="../../image/illustration/prague.png" width="100%"></img>
         <p></p>
-        <img src="../image/illustration/sketchbook 3.png" width="100%"></img>
+        <img src="../../image/illustration/sketchbook 3.png" width="100%"></img>
         <p></p>
-        <img src="../image/kafkas_daughter/IMG_7889.jpeg" width="100%"></img>
+        <img src="../../image/kafkas_daughter/IMG_7889.jpeg" width="100%"></img>
         <p></p>
-        <img src="../image/kafkas_daughter/IMG_7928.jpeg" width="100%"></img>
+        <img src="../../image/kafkas_daughter/IMG_7928.jpeg" width="100%"></img>
     </div>
 
 
