--- a/jp/project/objects on parade.html
+++ b/jp/project/objects on parade.html
@@ -14,12 +14,12 @@
       <p> Collaboration with <a href="https://olivershore.com/" target="blank" rel="noreferrer noopener">Oliver Shore</a>.</p>
       <div class="twosplit">
         <div>
-          <a href="javascript:void(0);" onclick="window.open('Watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../image/water-tower/Tower 8.gif" width="90px"></img></a>
+          <a href="javascript:void(0);" onclick="window.open('Watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../../image/water-tower/Tower 8.gif" width="90px"></img></a>
           <p> Watertowers </p>
 
         </div>
         <div>
-          <a href="javascript:void(0);" onclick="window.open('breakwater.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../image/breakwater/tetrapod.png" width="90px"></img></a>
+          <a href="javascript:void(0);" onclick="window.open('breakwater.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../../image/breakwater/tetrapod.png" width="90px"></img></a>
           <p> Breakwaters </p>
 
 
