--- a/jp/project/perfume.html
+++ b/jp/project/perfume.html
@@ -12,17 +12,17 @@
 
     <div class="content">
       <p>A perfume container that I lathed from solid aluminium. Notes of Metal and Oil.</p>
-      <img src="../image/perfume/IMG_7212.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7212.jpeg" width="100%"></img>
       <p></p>
-      <img src="../image/perfume/IMG_7178.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7178.jpeg" width="100%"></img>
       <p></p>
-      <img src="../image/perfume/IMG_7205.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7205.jpeg" width="100%"></img>
       <p></p>
-      <img src="../image/perfume/IMG_7223.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7223.jpeg" width="100%"></img>
       <p></p>
-      <img src="../image/perfume/IMG_7179.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7179.jpeg" width="100%"></img>
       <p></p>
-      <img src="../image/perfume/IMG_7196.jpeg" width="100%"></img>
+      <img src="../../image/perfume/IMG_7196.jpeg" width="100%"></img>
     </div>
 
 
