--- a/jp/project/radiometer.html
+++ b/jp/project/radiometer.html
@@ -16,17 +16,17 @@
       <p>(If videos do not play, please try another browser.)</p>
       <br>
       <video  autoplay muted loop width="100%">
-        <source src="../image/Radiometer/spin landscape.mp4" type="video/mp4">
+        <source src="../../image/Radiometer/spin landscape.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <p></p>
       <video  autoplay muted loop width="100%">
-        <source src="../image/Radiometer/spin room.mp4" type="video/mp4">
+        <source src="../../image/Radiometer/spin room.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <p></p>
       <video  autoplay muted loop width="100%">
-        <source src="../image/Radiometer/radiometer video.mp4" type="video/mp4">
+        <source src="../../image/Radiometer/radiometer video.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
 
