--- a/jp/project/windowclock.html
+++ b/jp/project/windowclock.html
@@ -17,11 +17,11 @@
 
     <br>
     <br>
-    <img src="../image/windowclock/01.jpg" width="550px"></img>
+    <img src="../../image/windowclock/01.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/windowclock/02.jpg" width="550px"></img>
+    <img src="../../image/windowclock/02.jpg" width="550px"></img>
     <p></p>
-    <img src="../image/windowclock/03.jpg" width="550px"></img>
+    <img src="../../image/windowclock/03.jpg" width="550px"></img>
 
     </div>
 
