--- a/jp/project/Watertower.html
+++ b/jp/project/Watertower.html
@@ -14,23 +14,23 @@
     <p>Inspired by our mutual love of landscape-scale vessels for Water, a set of animated Stickers available on <a href="https://store.line.me/stickershop/product/14349634/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
     <p>Towers were designed though a process of trading the 3D models for eachother to edit and add details to, Then rotated and rendered by Oliver.</p>
     <p><br></p>
-    <img src="../image/water-tower/tower overview.jpg" width="550px"></img>
+    <img src="../../image/water-tower/tower overview.jpg" width="550px"></img>
     <p><br></p>
-    <img src="../image/water-tower/Tower 1.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 1.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 2.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 2.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 3.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 3.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 4.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 4.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 5.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 5.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 6.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 6.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 7.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 7.gif" width="550px"></img>
     <p></p>
-    <img src="../image/water-tower/Tower 8.gif" width="550px"></img>
+    <img src="../../image/water-tower/Tower 8.gif" width="550px"></img>
     <p></p>
     <p></p>
     <p></p>
