--- a/jp/project/breakwater.html
+++ b/jp/project/breakwater.html
@@ -14,23 +14,23 @@
     <p>Inspired by our mutual love of Breakwater objects, a set of Stickers available on <a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
     <p>Modelled by Caleb Woodward, textured by Oliver Shore.</p>
     <p><br></p>
-    <img src="../image/breakwater/breakwater overview.jpg" width="550px"></img>
+    <img src="../../image/breakwater/breakwater overview.jpg" width="550px"></img>
     <p><br></p>
-    <img src="../image/breakwater/tetrapod.png" width="550px"></img>
+    <img src="../../image/breakwater/tetrapod.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/a jack.png" width="550px"></img>
+    <img src="../../image/breakwater/a jack.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/antifer.png" width="550px"></img>
+    <img src="../../image/breakwater/antifer.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/crablock.png" width="550px"></img>
+    <img src="../../image/breakwater/crablock.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/kolos.png" width="550px"></img>
+    <img src="../../image/breakwater/kolos.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/tribar.png" width="550px"></img>
+    <img src="../../image/breakwater/tribar.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/trilong.png" width="550px"></img>
+    <img src="../../image/breakwater/trilong.png" width="550px"></img>
     <p></p>
-    <img src="../image/breakwater/cubipod.png" width="550px"></img>
+    <img src="../../image/breakwater/cubipod.png" width="550px"></img>
     <p></p>
     <p></p>
     <p></p>
