--- a/jp/project/illustration.html
+++ b/jp/project/illustration.html
@@ -19,34 +19,34 @@
       <br>
       <p>Fashion illustration - <a href="https://venicew.com" target="blank">VeniceW</a>'s 2023 SS Collection 'Question Mark Island'</p>
       <div class="threeSplit">
-        <img src="../image/illustration/venice zoom a.png" width="100%"></img>
+        <img src="../../image/illustration/venice zoom a.png" width="100%"></img>
 
-        <img src="../image/illustration/venice zoom b.png" width="100%"></img>
-        <img src="../image/illustration/venice zoom d.png" width="100%"></img>
+        <img src="../../image/illustration/venice zoom b.png" width="100%"></img>
+        <img src="../../image/illustration/venice zoom d.png" width="100%"></img>
 
         </div>
       <br>
       <br>
-      <img src="../image/illustration/prague.png" width="100%"></img>
+      <img src="../../image/illustration/prague.png" width="100%"></img>
       <br>
       <p>From a trip to Prague, Czechia</p>
 
       <br>
       <br>
-      <img src="../image/illustration/flash.png" width="100%"></img>
+      <img src="../../image/illustration/flash.png" width="100%"></img>
       <br>
       <p>Tattoo Flash for an artist based in Austin, Texas.</p>
 
       <br>
       <br>
-      <img src="../image/illustration/yohji fruits.jpg" width="100%"></img>
+      <img src="../../image/illustration/yohji fruits.jpg" width="100%"></img>
       <br>
       <p>Fashion Illustration - Yohji Yamamoto ensembles and outfit from Fruits magazine.</p>
 
 
       <br>
       <br>
-      <img src="../image/illustration/sketchbook 3.png" width="100%"></img>
+      <img src="../../image/illustration/sketchbook 3.png" width="100%"></img>
       <br>
       <p>Fashion Illustration/ Character design for <a href="kafkas_daughter.html">'Kafka's Daughter'.</a></p>
 
