--- a/jp/project/logo.html
+++ b/jp/project/logo.html
@@ -13,7 +13,7 @@
     <div class="content">
       <p>Selected Logo work, both Personal and for Clients.</p>
 
-      <img src="../image/logo/Logos layout-01.png" width="100%"></img>
+      <img src="../../image/logo/Logos layout-01.png" width="100%"></img>
       <div class="twosplit">
         <p> Set of Nine Logos</p>
         <p> 2021</p>
@@ -21,7 +21,7 @@
       <p></p>
       <p></p>
 
-      <img src="../image/logo/Logos layout-02.png" width="100%"></img>
+      <img src="../../image/logo/Logos layout-02.png" width="100%"></img>
       <div class="twosplit">
         <p> Lunar Films</p>
         <p> 2021</p>
@@ -30,7 +30,7 @@
       <p></p>
       <p></p>
 
-      <img src="../image/logo/Logos layout-03.png" width="100%"></img>
+      <img src="../../image/logo/Logos layout-03.png" width="100%"></img>
       <div class="twosplit">
         <p> Subtle Clef</p>
         <p> 2021</p>
@@ -39,7 +39,7 @@
       <p></p>
       <p></p>
 
-      <img src="../image/logo/Logos layout-04.png" width="100%"></img>
+      <img src="../../image/logo/Logos layout-04.png" width="100%"></img>
       <div class="twosplit">
         <p> ReelHouse</p>
         <p> 2021</p>
@@ -49,7 +49,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-05.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-05.png" width="100%"></img>
     <div class="twosplit">
       <p> Pandora Parcel Service</p>
       <p> 2021</p>
@@ -58,7 +58,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-06.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-06.png" width="100%"></img>
     <div class="twosplit">
       <p> Elliot Oscar Haberdashery</p>
       <p> 2021</p>
@@ -67,7 +67,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-07.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-07.png" width="100%"></img>
     <div class="twosplit">
       <p> Twins*</p>
       <p> 2021</p>
@@ -76,7 +76,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-08.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-08.png" width="100%"></img>
     <div class="twosplit">
       <p> Lunar Films (Another Draft)</p>
       <p> 2021</p>
@@ -85,7 +85,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-09.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-09.png" width="100%"></img>
     <div class="twosplit">
       <p> Ermann & Ermann</p>
       <p> 2021</p>
@@ -94,7 +94,7 @@
     <p></p>
     <p></p>
 
-    <img src="../image/logo/Logos layout-10.png" width="100%"></img>
+    <img src="../../image/logo/Logos layout-10.png" width="100%"></img>
     <div class="twosplit">
       <p> Ichiban</p>
       <p> 2021</p>
