--- a/jp/project/station-searching.html
+++ b/jp/project/station-searching.html
@@ -18,17 +18,17 @@
     <br>
     <p></p>
     <p>Selected Frames:</p>
-    <img src="../image/station-searching/01.png" width=560px;></img>
+    <img src="../../image/station-searching/01.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/02.png" width=560px;></img>
+    <img src="../../image/station-searching/02.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/03.png" width=560px;></img>
+    <img src="../../image/station-searching/03.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/04.png" width=560px;></img>
+    <img src="../../image/station-searching/04.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/10.png" width=560px;></img>
+    <img src="../../image/station-searching/10.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/05.png" width=560px;></img>
+    <img src="../../image/station-searching/05.png" width=560px;></img>
     <p><br></p>
     <p> Character </p>
     <p> The short originally featured a character I designed, modelled, textured and rigged, animated using motion capture. I completed it to the stage of getting motion capture working however was unhappy with the quality of the result. In the end I was unable to use it in the finished short due to time constraints but it was a fun learning experience to create.</p>
